bibliography 기능 추가. (#10)

--- a/_extensions/bitPublish/_extension.yml
+++ b/_extensions/bitPublish/_extension.yml
@@ -78,6 +78,7 @@ contributes:
       include-after-body:  
         - text: |      
             \printindex  
+      cite-method: biblatex       
       linkcolor: highlight
       urlcolor: highlight
       keep-tex: true
