--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,13 +2,14 @@ project:
   type: book
   output-dir: docs
 
-lang: kr
+lang: ko-KR
 
 book:
   title: "bitPublish를 이용하여 한글 책 조판하기"
   chapters:
     - index.qmd
     - chap_exams.qmd
+    - chap_intro_bitpublish.qmd
     - references.qmd
-    
 bibliography: references.bib
+link-citations: false
