--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ book:
     - chap_exams.qmd
     - chap_intro_bitpublish.qmd
     - chap_troubleshooting.qmd
+    - chap_version.qmd
     - references.qmd
 bibliography: references.bib
 link-citations: false
