edit quote block

--- a/_extensions/bitPublish/_extension.yml
+++ b/_extensions/bitPublish/_extension.yml
@@ -76,5 +76,5 @@ contributes:
       linkcolor: highlight
       urlcolor: highlight
       keep-tex: false
-      keep-md: true
+      keep-md: false
       
