Code Chunk에 한줄 넘는 코드가 들어가는 경우 PDF 파일에서 줄바꿈이 되지 않아 이를 수정함

--- a/_extensions/bitPublish/_extension.yml
+++ b/_extensions/bitPublish/_extension.yml
@@ -68,6 +68,10 @@ contributes:
             \fancyhead[OR]{\changesize \numberfont 한글 책 조판하기 ---}
             \fancyfoot[EL]{{\pagefont\thepage}{\hskip4mm}{\changesize \leftmark}}
             \fancyfoot[OR]{{\changesize \rightmark}{\hskip4mm}{\pagefont\thepage}}
+            
+            %% 코드 overflow 방지
+            \usepackage{fvextra}
+            \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}            
         - file: bitPublish.tex
       include-after-body:  
         - text: |      
