--- a/_extensions/bitPublish/_extension.yml
+++ b/_extensions/bitPublish/_extension.yml
@@ -1,6 +1,6 @@
 title: "bitPublish"
 author: "Choonghyun Ryu"
-version: 0.2.5
+version: 0.2.6
 
 contributes:
   format:
@@ -82,5 +82,5 @@ contributes:
       cite-method: biblatex
       linkcolor: highlight
       urlcolor: highlight
-      keep-tex: false
+      keep-tex: true
       keep-md: false
