--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,5 +12,6 @@ book:
     - chap_intro_bitpublish.qmd
     - chap_troubleshooting.qmd
     - chap_version.qmd
+    - chap_solve_exercise.qmd    
 bibliography: references.bib
 link-citations: false
